cmake_minimum_required(VERSION 3.13)
project(Network)

set(CMAKE_CXX_STANDARD 14)

add_executable(
#        Network main.cpp
#        NetWorkFirstTry/NetWorkFirstTry.cpp
#        NetWorkFirstTry/NetWorkFirstTry.h
#        ShowIp/ShowIp.cpp
#        ShowIp/ShowIp.h
#        ClientServerTcp/ServerTcp.cpp
#        ClientServerTcp/ClientTcp.cpp
#        ClientServerUdp/ClientUdp.cpp
#        ClientServerUdp/ServerUdp.cpp
#        Select/SelectServer.cpp
#        Select/Select.cpp
#        SendControl/SendControl.cpp
#        SendControl/SendControl.h
#        Float/Float.cpp
#        Float/Float.h
#        Pack/Pack.cpp
#        Pack/Pack.h
#        Message/Message.h
        Network Server51.cpp
#        Client51.cpp
#        Utils.cpp
#        Utils.h
)
